stainless_frontend/tests/pass/mut_params.rs
extern crate stainless;

pub fn change<T>(place: &mut T, new: T) -> &mut T {
  *place = new;
  place
}
