stainless_frontend/tests/fail/mut_immutable_field.rs
extern crate stainless;

struct A {
  b: bool,
}

fn set_false(mut a: A) -> A {
  a.b = false;
  a
}
